2010-03-28  Eric B. Weddington  <eric.weddington@atmel.com>

	Add support for new devices: attiny84a, atmega325a, atmega3250a,
	atmega329a, atmega3290a.
	* configure.ac: Add support for new devices.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/eeprom.h: Same.
	* NEWS: Add news item.

2010-03-25  Eric B. Weddington  <eric.weddington@atmel.com>

	Add support for new architecture: avrtiny10. Add support for new devices:
	attiny4, attiny5, attiny9, attiny10, attiny20, attiny40.
	* configure.ac: Add support for new devices.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/sleep.h: Same.
	* NEWS: Add news item.

2010-03-25  Eric B. Weddington  <eric.weddington@atmel.com>

	Add support for new devices: ATxmega128A1U, ATxmega64A1U.
	* configure.ac: Add support for new devices.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/eeprom.h: Same.
	* NEWS: Add news item.

2010-03-22  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox64a1u.h: New file.

2010-03-20  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/fuse.h: Add definition of FUSES for XMEGA devices.
	* include/avr/iox128a1u.h: Regenerate file. New definitions, corrections.

2010-03-19  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iotn20.h: New file.
	* include/avr/iotn40.h: New file.

2010-03-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Probe the compiler for the availability of the