@@ -247,6 +247,7 @@
   + ATmega3250A
   + ATmega329A
   + ATmega3290A
+  + M3000
 
 * Optimized functions:
 
